@@ -1,0 +1,4 @@
+def test():
+    print "something"
+    a = 4
+    assert a == 2
