@@ -442,7 +442,10 @@ class IPluginInterface(object):
     def formatError(self, test, err):
         """Called in result.addError, before plugin.addError. If you
         want to replace or modify the error tuple, return a new error
-        tuple.
+        tuple. Since this method is chainable, you must return the
+        test as well, so you you'll return something like::
+
+          return (test, err)
 
         :Parameters:
           test : `nose.case.Test`_
@@ -457,7 +460,10 @@ class IPluginInterface(object):
     def formatFailure(self, test, err):
         """Called in result.addFailure, before plugin.addFailure. If you
         want to replace or modify the error tuple, return a new error
-        tuple.
+        tuple. Since this method is chainable, you must return the
+        test as well, so you you'll return something like::
+
+          return (test, err)
 
         :Parameters:
           test : `nose.case.Test`_
