@@ -39,5 +39,4 @@ class FailureDetail(Plugin):
         ec, ev, tb = err
         tbinfo = inspect_traceback(tb)
         test.tbinfo = tbinfo
-        ev = '\n'.join([str(ev), tbinfo])
-        return (ec, ev, tb)
+        return (test, (ec, '\n'.join([str(ev), tbinfo]), tb))
